samples/express/views/errors/circular-include-a.njk
{% include "errors/circular-include-b.njk" %}
